# pa4bf

./: .env.example  .gitignore  drizzle.config.ts  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  start-database.sh  tailwind.config.ts  tsconfig.json
src/: env.js  sw.ts
src/app/: error.tsx  layout.tsx  loading.tsx  manifest.ts  page.tsx
src/app/api/uploadthing/: core.ts
src/app/group/[groupId]/: layout.tsx  qr-code.tsx
src/app/group/[groupId]/@member/: page.tsx
src/app/group/[groupId]/@member/results/: page.tsx
src/app/group/[groupId]/@member/task/: page.tsx
src/app/group/[groupId]/@organiser/: admin-tab.tsx  columns.tsx  members-tab.tsx  members_data.ts  page.tsx  tasks-tab.tsx
src/app/group/[groupId]/@organiser/(admin)/: admin-tab.tsx  delete-group-button.tsx  group-name-form.tsx  new-task-form.tsx  results-button.tsx  rotate-invite-code.tsx
src/app/group/new/: new-group-form.tsx  page.tsx
src/app/join/[code]/: join-group.tsx  page.tsx
src/app/me/: page.tsx
src/app/task/[taskId]/@member/: page.tsx
src/app/test/: page.tsx
src/apy/: app.py  config.py  instance.py  pyproject.toml
src/apy/repository/: beams.py  redis.py
src/apy/routers/: redis.py
src/components/: auth.tsx  beams.tsx  header.tsx  page-wrapper.tsx  picture-card.tsx  picture-grid.tsx  upload-button.tsx
src/components/ui/: data-table-header.tsx  data-table.tsx  spinner.tsx
src/server/api/: root.ts  trpc.ts
src/server/api/routers/: group.ts  picture.ts  task.ts  user.ts
src/server/api/routers/group/: admin.ts  index.ts
src/server/db/: index.ts  schema.ts
(+8 files in other folders)
