[tool.poetry]
name = "apy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
redis = "^5.0.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
numpy = "^1.26.3"
sentence-transformers = "^2.2.2"
pusher-push-notifications = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
